@@ -1,3 +1,9 @@
+Fri Jun  7 11:45:23 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/expr.rb : Revise global constant array subscript
+	  evaluation policy in order to make undefined-value when the subscript
+	  value is indefinite.
+
 Fri Jun  7 10:44:06 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* features/code_check/W1071.feature : Add scenario to reproduce the
